# Rising-BSM-Dev

./: .env  .env.example  .env.marketplace.example  .env.old  .env.test  .gitignore  ARCHITECTURE.md  DOCUMENTATION.md  Dockerfile  MIGRATION-STATUS.md  README.md  app.js  auth-centralization-summary.md  csrf-reset.js  db-init.sql  db.js  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  errors.md  implementation_report.md  install-uuid.sh  integration-test.ps1  integration-test.sh  jest.config.js  jest.config.ts  jest.setup.js  jest.setup.ts  jest.teardown.js  manifest.json  package-lock.json  package.json  run-specific-test.sh  schema.prisma  server.js  setup-test-env.sh  test.txt  tsconfig.json  tsoa.json  verify-test.sh  (+2 more)
app/: .env.example  .env.local  .eslintrc.json  .gitignore  CLAUDE.md  Dockerfile  README-role-permissions-fix.md  README.md  RUNTIME.md  Understand the Client Logs.md  debug-crypto.js  (+19 more)
rising_mcp_server/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  get_token.py  pyproject.toml  pytest.ini  requirements.txt  run_mcp.py  run_sse.py  test_connection.py  test_setup.py  tox.ini
rising_mcp_server/docs/: ARCHITECTURE.md  feature-architecture-diagram.md
rising_mcp_server/examples/: auth_example.py
rising_mcp_server/src/: __init__.py  auth.py  bms_client.py  config.py  logger.py  mcp_server.py  sse_server.py
rising_mcp_server/src/resources/: __init__.py  appointments.py  customers.py  dashboard.py  requests.py
rising_mcp_server/src/tools/: __init__.py  appointment_tools.py  auth_tools.py  automation_tools.py  customer_tools.py  request_tools.py
rising_mcp_server/tests/: __init__.py  conftest.py  test_auth.py  test_bms_client.py  test_config.py  test_integration.py  test_logger.py  test_mcp_server.py  test_resources.py  test_sse_server.py  test_tools.py
(+2806 files in other folders)
